@@ -2,6 +2,7 @@ Revision history for perl distribution Devel-MojoProf
 
 0.02 Not Released
  - Changed "reporter" into an object
+ - Devel::MojoProf::Reporter can write a CSV file
 
 0.01 2019-01-29T13:44:21+0900
  - Started project
